Fixed z-index on sticky drawers

--- a/facade/init.less
+++ b/facade/init.less
@@ -46,7 +46,7 @@ hr {
 
 .sticky,
 .is_stuck {
-	z-index: 6000;
+	z-index: 9010;
 	border-radius : 0 !important;
 }
 
